[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/potion.png" type="Texture" id=1]
[ext_resource path="res://items/Potion.gd" type="Script" id=2]


[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[node name="Potion" type="Sprite" index="0"]

texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )

[node name="FlashTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]


